# Utils

./: .gitignore  README.md  requirements.txt  test-output.json  video_topic_splitter.py  vts.json
defunct/: jack-time-machine.sh  process_video.py  process_videov2.py
dev/: audsplitter.sh  dictation.sh  video_process_utility.py
staging/: vts
video_topic_splitter/: __init__.py  audio.py  core.py  main.py  module_header_template.py  project.py  setup.py  topic_modeling.py  transcription.py  video_analysis.py
vts/: audio_processing.py  main.py  metadata_generation.py  segment_analysis.py  topic_modeling.py  transcription.py  utils.py
vtsV2/: .env.exmaple  .gitignore  README.md  pyproject.toml
vtsV2/src/vts/: __init__.py  config.py  main.py  models.py  utils.py
vtsV2/src/vts/analysis/: topics.py  video.py
vtsV2/src/vts/core/: audio.py  metadata.py  processor.py  reporting.py  segmentation.py  transcription.py
vtsV2/src/vts/templates/: report.md
